删除全局代码“贷款关键字”

--- a/TGWSCAPP /TGWSCAPP/Common/AccountEngine/LoginViewController/LoginViewController.xib
+++ b/TGWSCAPP /TGWSCAPP/Common/AccountEngine/LoginViewController/LoginViewController.xib
@@ -206,7 +206,7 @@
                             </attributedString>
                             <nil key="highlightedColor"/>
                         </label>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ACM-AU-3qt" userLabel="《小小贷款用户协议》">
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ACM-AU-3qt" userLabel="用户协议">
                             <rect key="frame" x="140" y="0.0" width="70" height="25"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
@@ -218,7 +218,7 @@
                                 <action selector="treaty_YH:" destination="-1" eventType="touchUpInside" id="aOT-uj-4FC"/>
                             </connections>
                         </button>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QCf-9O-qdc" userLabel="《小小贷款用户协议》">
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QCf-9O-qdc" userLabel="隐私协议">
                             <rect key="frame" x="224" y="0.0" width="70" height="25"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
